# MobileLoveSpark

./: .replit  fix_rerun.py.bak  manage.py  pyproject.toml  run_django.py  test_db.py
.streamlit/: config.toml
PlayLoveSpark/django_backend/api/: urls.py
PlayLoveSpark/flutter_app/: .metadata  README.md  analysis_options.yaml  pubspec.yaml
PlayLoveSpark/flutter_app/lib/: main.dart  routes.dart
PlayLoveSpark/flutter_app/lib/models/: app_state.dart  challenge.dart  (+2 more)
api/: serializers.py  views.py
attached_assets/: Pasted-PROMPT-Develop-a-cross-platform-mobile-application-named-PlayLove-Spark-using-Replit-designed-t-1747062474763.txt  Pasted-PROMPT-Migrate-the-existing-PlayLoveSpark-application-to-a-Flutter-Django-architecture-and-redes-1747112558184.txt  evil_heart (1).eps
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templatetags/: custom_filters.py
data/: challenges.py  education.py  products.py
database/: __init__.py  connection.py  crud.py  models.py  utils.py
pages/: education.py  progress.py
playlove_spark/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: custom.css
templates/: article_detail.html  base.html  challenges.html  education.html  home.html  product_detail.html  products.html  progress.html  settings.html
unused_streamlit_files/: README.md  app.py
unused_streamlit_files/css/: custom.css
unused_streamlit_files/pages/: challenges.py  home.py  products.py  settings.py
utils/: ai_generator.py  challenge_provider.py  data_manager.py  session_state.py  visualization.py
(+15 files in other folders)
